Fixed Overflow Issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@
 
 html {
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
